# cl_stub

./: CMakeLists.txt  cl_stub.c  cl_stub.cpp  test_stub.cc  test_stub.cpp  test_stub2.cpp
include/: cl_stub.h
src/: CMakeLists.txt  cl_stub.cpp  cl_stub.h
test/: CMakeLists.txt  cl_test.cpp
